[package]
name = "pinnacle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
wasm-bindgen = "0.2"
html-macro = "0.2.2"
js-sys = "0.3"
percy-dom = "0.9"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "MouseEvent",
    "Window",
    "console"
]
